Archive2/80/85777bc4dc23ac/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'cout' was not declared in this scope
     cout >> hallo >> endl;
     ^
main.cpp:5:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:5:13: error: 'hallo' was not declared in this scope
     cout >> hallo >> endl;
             ^
main.cpp:5:22: error: 'endl' was not declared in this scope
     cout >> hallo >> endl;
                      ^
main.cpp:5:22: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
